<resources>
    <string name="app_name">Irrigo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="crop_selection">Crop Selection</string>
    <string name="sprinkler">Sprinkler</string>
    <string name="lateral">Lateral</string>
    <string name="submain">Submain</string>
    <string name="main_line">Main line</string>
    <string name="layout">Layout</string>
    <string name="pump">Pump</string>
    <string name="preferences">Preferences</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="about_us">About us</string>
    <string name="quotation">Quotation</string>
    <string name="benefit_cost">Benefit cost</string>

    <string-array name="crop_name">
        <item>Select crop name</item>
        <item>Onion</item>
        <item>Pea</item>
        <item>Cabbage</item>
        <item>Chilli</item>
        <item>Cauliflower</item>
        <item>Brinjal</item>
        <item>Potato</item>
        <item>Tomato</item>
        <item>Wheat</item>
        <item>Green Gram</item>
        <item>Groundnut</item>
        <item>Mustard</item>
        <item>Cotton</item>
        <item>Sugarcane</item>
        <item>Maize</item>
        <item>Mango</item>
        <item>Coconut</item>
        <item>Cashew</item>
    </string-array>

    <string-array name="soil_type">
        <item>Select soil type</item>
        <item>Low</item>
        <item>Medium</item>
        <item>Heavy</item>
    </string-array>

    <string-array name="default_area">
        <item>Select default area</item>
        <item>50 X 50</item>
        <item>100 X 50</item>
        <item>100 X 100</item>
        <item>100 X 150</item>
        <item>150 X 150</item>
        <item>200 X 200</item>
    </string-array>

    <string-array name="sprinkler_name">
        <item>Select Sprinkler name</item>
        <item>Micro</item>
        <item>Mini</item>
        <item>Rail Gun</item>
    </string-array>

    <string-array name="lateral_size">
        <item>Select Lateral size (mm)</item>
        <item>12</item>
        <item>16</item>
        <item>20</item>
        <item>32</item>
        <item>40</item>
        <item>50</item>
        <item>63</item>
        <item>75</item>
        <item>90</item>
        <item>110</item>
        <item>125</item>
        <item>140</item>
        <item>160</item>
        <item>180</item>
    </string-array>

    <string-array name="submain_size">
        <item>Select Submain size (mm)</item>
        <item>40</item>
        <item>50</item>
        <item>63</item>
        <item>75</item>
        <item>90</item>
        <item>110</item>
        <item>125</item>
        <item>140</item>
        <item>160</item>
        <item>180</item>
        <item>200</item>
        <item>225</item>
        <item>250</item>
        <item>280</item>
    </string-array>

    <string-array name="main_line_size">
        <item>Select Main line size (mm)</item>
        <item>40</item>
        <item>50</item>
        <item>63</item>
        <item>75</item>
        <item>90</item>
        <item>110</item>
        <item>125</item>
        <item>140</item>
        <item>160</item>
        <item>180</item>
        <item>200</item>
        <item>225</item>
        <item>250</item>
        <item>280</item>
        <item>300</item>
        <item>315</item>
        <item>340</item>
        <item>360</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_water_requirement_mm_day">Daily water requirement (mm/day)</string>
    <string name="From_given_configurations">From given configurations</string>
    <string name="select_default_area">Select default area</string>
    <string name="enter_area_manually">Enter area manually</string>
    <string name="length_meter">Length (meter)</string>
    <string name="width_meter">Width (meter)</string>
    <string name="total_water_requirement">Total water requirement (ltr/day)</string>
    <string name="start">Start</string>
    <string name="sprinkler_specifications">Sprinkler Specifications</string>
    <string name="wetted_diameter">Wetted Diameter (mtr)</string>
    <string name="discharge">Discharge (lph)</string>
    <!--<string name="spray_diameter">Spray diameter (mtr)</string>-->
    <string name="total_no_of_sprinklers">Total no. of Sprinklers</string>
    <string name="total_flow_of_control">Total flow of control</string>
    <string name="crop_name">Crop name</string>
    <string name="type_of_sprinkler">Type of Sprinkler</string>
    <string name="area_of_field">Area of field</string>
    <string name="enter_no_of_field_section">Enter no. of field section</string>
    <string name="sectional_flow">Sectional flow (lph)</string>
    <string name="headloss">Headloss (meter)</string>
    <string name="enter_length">Enter length (meter)</string>
    <string name="lateral_length">Lateral length (meter)</string>
    <string name="lateral_diameter">Lateral diameter (mm)</string>
    <string name="sprinkler_in_each_section">Sprinkler_in_each_section</string>
    <string name="submain_length">Submain length</string>
    <string name="submain_diameter">Submain diameter</string>
    <string name="total_sections_run_at_a_time">Total sections run at a time</string>
    <string name="suction_delivery_head">Suction + Delivery head (meter)</string>
    <string name="connect_components">Connect components</string>
    <string name="primary_filter">Primary filter</string>
    <string name="disc_screen_filter">Disc/Screen filter</string>
    <string name="ventury">Ventury</string>
    <string name="pump_horse_power">Pump horse power</string>
    <string name="irrigation_time">Irrigation_time</string>
    <string name="invalid_range">Invalid range</string>
    <string name="select_pressure">Select Pressure</string>
    <string name="select_nozzle_type">Select Nozzle Type</string>
    <string name="alert">Alert!</string>
    <string name="alert_body">Please select the proper values first before moving on to next page.</string>
    <string name="invalid_value">Invalid Value</string>
    <string name="submain_headloss">Submain Headloss</string>
    <string name="main_line_headloss">Main line headloss</string>
    <string name="main_line_length">Main line length</string>
    <string name="main_line_diameter">Main line diameter</string>
</resources>
