<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorDisabledLight"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentCropSelection">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

<!--
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:enabled="false"
                android:id="@+id/crop_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:padding="@dimen/activity_horizontal_margin"
                android:hint="@string/crop_name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:enabled="false"
                android:id="@+id/area_of_field_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:padding="@dimen/activity_horizontal_margin"
                android:hint="@string/area_of_field"/>

        </android.support.design.widget.TextInputLayout>
-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/suction_delivery_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:padding="@dimen/activity_horizontal_margin"
                android:hint="@string/suction_delivery_head"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/connect_components"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/colorSecondaryText"
            android:layout_marginTop="@dimen/activity_horizontal_margin" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_select_area_auto"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_white_default">

            <CheckBox
                android:id="@+id/check_primary_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/primary_filter"
                android:textSize="18sp"
                android:textColor="@color/colorSecondaryText"/>

            <CheckBox
                android:id="@+id/check_disc_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/disc_screen_filter"
                android:textSize="18sp"
                android:textColor="@color/colorSecondaryText"/>

            <CheckBox
                android:id="@+id/check_ventury"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/ventury"
                android:textSize="18sp"
                android:textColor="@color/colorSecondaryText"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_select_area_auto"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_white_default">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/pump_horse_power"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:hint="@string/pump_horse_power"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/irrigation_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:hint="@string/irrigation_time"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

    </LinearLayout>

</ScrollView>