<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorDisabledLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentWaterRequirement">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:enabled="false"
                android:id="@+id/crop_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:padding="@dimen/activity_horizontal_margin"
                android:hint="@string/crop_name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:enabled="false"
                android:id="@+id/sprinkler_type_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:padding="@dimen/activity_horizontal_margin"
                android:hint="@string/type_of_sprinkler"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:enabled="false"
                android:id="@+id/area_of_field_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:padding="@dimen/activity_horizontal_margin"
                android:hint="@string/area_of_field"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_select_area_auto"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_white_default">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/total_sections_run_at_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:hint="@string/total_sections_run_at_a_time"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/discharge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:hint="@string/discharge"/>

            </android.support.design.widget.TextInputLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                app:mrl_rippleColor="@color/colorAccent"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleHover="true"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleRoundedCorners="2dp">

                <Spinner
                    android:id="@+id/select_main_line_size"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_theme"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textAlignment="center"
                    android:dropDownSelector="@color/colorAccent"
                    android:entries="@array/main_line_size" />

            </com.balysv.materialripple.MaterialRippleLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/enter_length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:hint="@string/enter_length"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_select_area_auto"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_white_default">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/headloss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:hint="@string/headloss"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/main_line_length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:hint="@string/submain_length"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/main_line_diameter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:hint="@string/submain_diameter"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

    </LinearLayout>

</ScrollView>