<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:background="@color/colorDisabledLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentCropSelection">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:mrl_rippleColor="@color/colorAccent"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleHover="true"
            app:mrl_rippleDelayClick="false"
            app:mrl_rippleRoundedCorners="2dp">

            <Spinner
                android:id="@+id/spinner_crop_name"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_theme"
                android:padding="@dimen/activity_horizontal_margin"
                android:textAlignment="center"
                android:dropDownSelector="@color/colorAccent"
                android:entries="@array/crop_name" />

        </com.balysv.materialripple.MaterialRippleLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputEditText
                android:enabled="false"
                android:id="@+id/daily_water_requirement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:textSize="20sp"
                android:padding="@dimen/activity_horizontal_margin"
                android:hint="@string/daily_water_requirement_mm_day"/>

        </android.support.design.widget.TextInputLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:mrl_rippleColor="@color/colorAccent"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleHover="true"
            app:mrl_rippleDelayClick="false"
            app:mrl_rippleRoundedCorners="2dp">

            <Spinner
                android:id="@+id/spinner_soil_type"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_theme"
                android:padding="@dimen/activity_horizontal_margin"
                android:textAlignment="center"
                android:dropDownSelector="@color/colorAccent"
                android:entries="@array/soil_type" />

        </com.balysv.materialripple.MaterialRippleLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/select_default_area"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/colorSecondaryText" />

        <RadioGroup
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_select_area_auto"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_white_default">

            <RadioButton
                android:id="@+id/radio_select_area_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/From_given_configurations" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:mrl_rippleColor="@color/colorAccent"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleHover="true"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleRoundedCorners="2dp">

                <Spinner
                    android:id="@+id/spinner_default_area"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_theme"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textAlignment="center"
                    android:dropDownSelector="@color/colorAccent"
                    android:entries="@array/default_area" />

            </com.balysv.materialripple.MaterialRippleLayout>

            <RadioButton
                android:id="@+id/radio_select_area_manual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_area_manually" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/manual_area_length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:hint="@string/length_meter"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/manual_area_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:hint="@string/width_meter"/>

            </android.support.design.widget.TextInputLayout>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/total_water_requirement"/>

        <TextView
            android:id="@+id/total_water_requirement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:padding="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="250dp" />

    </LinearLayout>

</ScrollView>